--- a/note/emacs-lisp.html
+++ b/note/emacs-lisp.html
@@ -71,48 +71,47 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org77a6338">개념 메모</a>
+<li><a href="#org0f75d35">개념 메모</a>
 <ul>
-<li><a href="#orgc4186dc">샤프(Sharpsign)</a></li>
-<li><a href="#orgfaf239b">단 따옴표(Single Quote)</a></li>
-<li><a href="#org4017431">샤프 단 따옴표(Sharpsign Single Quote)</a></li>
-<li><a href="#org56cb9c1">apply vs funcall</a></li>
-<li><a href="#org2107333">Character</a></li>
-<li><a href="#orgc57dc79">setq vs setq-default</a></li>
-<li><a href="#orgfeb2b8e">Comma and Back-Quote</a></li>
-<li><a href="#orgaf91825">Property List (plist)</a></li>
+<li><a href="#org8607c8b">샤프(Sharpsign)</a></li>
+<li><a href="#org280c61b">단 따옴표(Single Quote)</a></li>
+<li><a href="#org83fb8b7">샤프 단 따옴표(Sharpsign Single Quote)</a></li>
+<li><a href="#orgb2eacf5">apply vs funcall</a></li>
+<li><a href="#org084b596">Character</a></li>
+<li><a href="#orgbeacb6c">setq vs setq-default</a></li>
+<li><a href="#orgb38883a">Comma and Back-Quote</a></li>
+<li><a href="#org7edab88">Property List (plist)</a></li>
 </ul>
 </li>
-<li><a href="#org47c1bfb">코드 예제</a>
+<li><a href="#orga00f248">코드 예제</a>
 <ul>
-<li><a href="#org5326e8d">파일 읽고 저장하기</a></li>
-<li><a href="#org6f12788">타입 변환</a></li>
-<li><a href="#org50d8c9c">셸 커맨드</a></li>
+<li><a href="#org5f547e1">파일 읽고 편집하고 저장하기</a></li>
+<li><a href="#org2fbc0db">타입 변환</a></li>
+<li><a href="#orgf5b52fe">셸 커맨드</a></li>
 </ul>
 </li>
-<li><a href="#orgb65277b">에러 노트</a>
+<li><a href="#org57a8c78">에러 노트</a>
 <ul>
-<li><a href="#org39c618f">commandp</a></li>
-<li><a href="#org7131c27">안 쓰는 매개변수</a></li>
+<li><a href="#org364a708">commandp</a></li>
+<li><a href="#org9c1de9a">안 쓰는 매개변수</a></li>
 </ul>
 </li>
 </ul>
 </div>
 </div>
 <p>
-Emacs Lisp은 이름 처럼 <a href="emacs.html">Emacs</a>에서 사용할 수 있는
-Lisp 언어를 의미한다.
-물론 표준 Common Lisp에 <a href="emacs.html">Emacs</a>의 다양한 함수가 지원되는
-형태라서 Lisp이 아니라고 하기에도 좀 미묘하긴 하다.
+Emacs Lisp은 이름 처럼 <a href="emacs.html">Emacs</a>에서 사용할 수 있는 Lisp 언어를 의미한다.
+물론 표준 Common Lisp에 <a href="emacs.html">Emacs</a>의 다양한 함수가 지원되는 형태라서
+Lisp이 아니라고 하기에도 좀 미묘하긴 하다.
 </p>
 
-<div id="outline-container-org77a6338" class="outline-2">
-<h2 id="org77a6338">개념 메모</h2>
-<div class="outline-text-2" id="text-org77a6338">
+<div id="outline-container-org0f75d35" class="outline-2">
+<h2 id="org0f75d35">개념 메모</h2>
+<div class="outline-text-2" id="text-org0f75d35">
 </div>
-<div id="outline-container-orgc4186dc" class="outline-3">
-<h3 id="orgc4186dc">샤프(Sharpsign)</h3>
-<div class="outline-text-3" id="text-orgc4186dc">
+<div id="outline-container-org8607c8b" class="outline-3">
+<h3 id="org8607c8b">샤프(Sharpsign)</h3>
+<div class="outline-text-3" id="text-org8607c8b">
 <p>
 <code>#</code> (Sharpsign) 은 s-expressions 특수 문법이다.
 근데 뭔 소린지 하나도 모르겠다.
@@ -132,9 +131,9 @@ Lisp 언어를 의미한다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgfaf239b" class="outline-3">
-<h3 id="orgfaf239b">단 따옴표(Single Quote)</h3>
-<div class="outline-text-3" id="text-orgfaf239b">
+<div id="outline-container-org280c61b" class="outline-3">
+<h3 id="org280c61b">단 따옴표(Single Quote)</h3>
+<div class="outline-text-3" id="text-org280c61b">
 <p>
 단 따옴표 <code>'</code> (혹은 quote 함수)는 식을 그대로 표현할 때 사용한다.
 예를 들어 <code>(1 2 3)</code> 이라는 리스트를 메시지로 출력하고 싶어서
@@ -175,9 +174,9 @@ Lisp 언어를 의미한다.
 </p>
 </div>
 </div>
-<div id="outline-container-org4017431" class="outline-3">
-<h3 id="org4017431">샤프 단 따옴표(Sharpsign Single Quote)</h3>
-<div class="outline-text-3" id="text-org4017431">
+<div id="outline-container-org83fb8b7" class="outline-3">
+<h3 id="org83fb8b7">샤프 단 따옴표(Sharpsign Single Quote)</h3>
+<div class="outline-text-3" id="text-org83fb8b7">
 <p>
 <code>#'function-name</code> 의 의미는
 <code>(function function-name)</code> 을 줄여서 표기한 것이다.
@@ -199,9 +198,9 @@ Lisp 언어를 의미한다.
 </p>
 </div>
 </div>
-<div id="outline-container-org56cb9c1" class="outline-3">
-<h3 id="org56cb9c1">apply vs funcall</h3>
-<div class="outline-text-3" id="text-org56cb9c1">
+<div id="outline-container-orgb2eacf5" class="outline-3">
+<h3 id="orgb2eacf5">apply vs funcall</h3>
+<div class="outline-text-3" id="text-orgb2eacf5">
 <p>
 위에서 본 <code>funcall</code> 과 비슷하게 <code>apply</code> 라는 것도 있다.
 사용 방법도 거의 동일하다.
@@ -235,9 +234,9 @@ Lisp 언어를 의미한다.
 </div>
 </div>
 </div>
-<div id="outline-container-org2107333" class="outline-3">
-<h3 id="org2107333">Character</h3>
-<div class="outline-text-3" id="text-org2107333">
+<div id="outline-container-org084b596" class="outline-3">
+<h3 id="org084b596">Character</h3>
+<div class="outline-text-3" id="text-org084b596">
 <p>
 <a href="emacs.html">Emacs</a>에서 문자는 ASCII 번호로 표현된다.
 즉 숫자다.
@@ -253,9 +252,9 @@ A는 65이기 때문에 위 코드는 참을 반환한다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgc57dc79" class="outline-3">
-<h3 id="orgc57dc79">setq vs setq-default</h3>
-<div class="outline-text-3" id="text-orgc57dc79">
+<div id="outline-container-orgbeacb6c" class="outline-3">
+<h3 id="orgbeacb6c">setq vs setq-default</h3>
+<div class="outline-text-3" id="text-orgbeacb6c">
 <p>
 <a href="emacs.html">Emacs</a>에는 버퍼 로컬 변수라는 개념이 있다. 예를 들자면
 <code>tab-width</code> 가 대표적인데, 각 버퍼의 메이저 모드마다 이 변수의 값이 다 다를 수
@@ -273,9 +272,9 @@ A는 65이기 때문에 위 코드는 참을 반환한다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgfeb2b8e" class="outline-3">
-<h3 id="orgfeb2b8e">Comma and Back-Quote</h3>
-<div class="outline-text-3" id="text-orgfeb2b8e">
+<div id="outline-container-orgb38883a" class="outline-3">
+<h3 id="orgb38883a">Comma and Back-Quote</h3>
+<div class="outline-text-3" id="text-orgb38883a">
 <div class="org-src-container">
 <pre class="src src-emacs-lisp"><span style="color: #51afef;">(</span><span style="color: #51afef;">setq</span> a <span style="color: #98be65;">"a's value"</span> b <span style="color: #98be65;">"b's value"</span> c <span style="color: #98be65;">"c's value"</span><span style="color: #51afef;">)</span>
 <span style="color: #51afef;">'</span><span style="color: #51afef;">(</span>a  b  c<span style="color: #51afef;">)</span>      <span style="color: #5B6268;">; </span><span style="color: #5B6268;">=&gt; (a b c)</span>
@@ -289,9 +288,9 @@ evaluated 시킨 결과로 치환 시킨다는 점이 다른 것 같다. 간혹 
 </p>
 </div>
 </div>
-<div id="outline-container-orgaf91825" class="outline-3">
-<h3 id="orgaf91825">Property List (plist)</h3>
-<div class="outline-text-3" id="text-orgaf91825">
+<div id="outline-container-org7edab88" class="outline-3">
+<h3 id="org7edab88">Property List (plist)</h3>
+<div class="outline-text-3" id="text-org7edab88">
 <p>
 프로퍼티 리스트는 사전(Dictionary) 타입과 비슷한 자료 구조다.
 </p>
@@ -324,13 +323,16 @@ evaluated 시킨 결과로 치환 시킨다는 점이 다른 것 같다. 간혹 
 </div>
 </div>
 </div>
-<div id="outline-container-org47c1bfb" class="outline-2">
-<h2 id="org47c1bfb">코드 예제</h2>
-<div class="outline-text-2" id="text-org47c1bfb">
+<div id="outline-container-orga00f248" class="outline-2">
+<h2 id="orga00f248">코드 예제</h2>
+<div class="outline-text-2" id="text-orga00f248">
+<p>
+각 함수의 설명은 <a href="emacs-lisp-functions.html">Emacs Lisp Functions</a> 글을 참고하자.
+</p>
 </div>
-<div id="outline-container-org5326e8d" class="outline-3">
-<h3 id="org5326e8d">파일 읽고 저장하기</h3>
-<div class="outline-text-3" id="text-org5326e8d">
+<div id="outline-container-org5f547e1" class="outline-3">
+<h3 id="org5f547e1">파일 읽고 편집하고 저장하기</h3>
+<div class="outline-text-3" id="text-org5f547e1">
 <div class="org-src-container">
 <pre class="src src-emacs-lisp"><span style="color: #51afef;">(</span><span style="color: #51afef;">with-temp-buffer</span>
   <span style="color: #c678dd;">(</span><span style="color: #a9a1e1;">insert-file-contents</span> <span style="color: #98be65;">"/foo/bar/file.md"</span><span style="color: #c678dd;">)</span>
@@ -340,9 +342,9 @@ evaluated 시킨 결과로 치환 시킨다는 점이 다른 것 같다. 간혹 
 </div>
 </div>
 </div>
-<div id="outline-container-org6f12788" class="outline-3">
-<h3 id="org6f12788">타입 변환</h3>
-<div class="outline-text-3" id="text-org6f12788">
+<div id="outline-container-org2fbc0db" class="outline-3">
+<h3 id="org2fbc0db">타입 변환</h3>
+<div class="outline-text-3" id="text-org2fbc0db">
 <p>
 숫자(정수 및 실수)와 문자열 간의 전환 두 가지 예제다.
 </p>
@@ -360,9 +362,9 @@ evaluated 시킨 결과로 치환 시킨다는 점이 다른 것 같다. 간혹 
 </p>
 </div>
 </div>
-<div id="outline-container-org50d8c9c" class="outline-3">
-<h3 id="org50d8c9c"><a href="shell.html">셸</a> 커맨드</h3>
-<div class="outline-text-3" id="text-org50d8c9c">
+<div id="outline-container-orgf5b52fe" class="outline-3">
+<h3 id="orgf5b52fe"><a href="shell.html">셸</a> 커맨드</h3>
+<div class="outline-text-3" id="text-orgf5b52fe">
 <p>
 <a href="shell.html">셸</a> 커맨드를 실행시키기 위해 대충 두 가지 함수가 있다.
 </p>
@@ -390,13 +392,13 @@ evaluated 시킨 결과로 치환 시킨다는 점이 다른 것 같다. 간혹 
 </div>
 </div>
 </div>
-<div id="outline-container-orgb65277b" class="outline-2">
-<h2 id="orgb65277b">에러 노트</h2>
-<div class="outline-text-2" id="text-orgb65277b">
+<div id="outline-container-org57a8c78" class="outline-2">
+<h2 id="org57a8c78">에러 노트</h2>
+<div class="outline-text-2" id="text-org57a8c78">
 </div>
-<div id="outline-container-org39c618f" class="outline-3">
-<h3 id="org39c618f">commandp</h3>
-<div class="outline-text-3" id="text-org39c618f">
+<div id="outline-container-org364a708" class="outline-3">
+<h3 id="org364a708">commandp</h3>
+<div class="outline-text-3" id="text-org364a708">
 <blockquote>
 <p>
 Wrong type argument: commandp, your-function
@@ -416,9 +418,9 @@ Wrong type argument: commandp, your-function
 </div>
 </div>
 </div>
-<div id="outline-container-org7131c27" class="outline-3">
-<h3 id="org7131c27">안 쓰는 매개변수</h3>
-<div class="outline-text-3" id="text-org7131c27">
+<div id="outline-container-org9c1de9a" class="outline-3">
+<h3 id="org9c1de9a">안 쓰는 매개변수</h3>
+<div class="outline-text-3" id="text-org9c1de9a">
 <p>
 예를 들어 아래와 같은 코드에서
 </p>
@@ -478,14 +480,14 @@ Unused lexical argument 'bar'
 <h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/emacs-lisp-functions.html">Emacs Lisp Functions</a></h2>
+<h2><a class="article-link-title" href="/note/emacs.html">Emacs</a></h2>
 <div class="article-link-date">
 2020년 4월 25일 수정</div>
 </div>
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/emacs.html">Emacs</a></h2>
+<h2><a class="article-link-title" href="/note/emacs-lisp-functions.html">Emacs Lisp Functions</a></h2>
 <div class="article-link-date">
 2020년 4월 25일 수정</div>
 </div>
